# Interpolation

./: CMakeLists.txt  README.md
src/2D Interpolation/: CubicSplineInterpolator.cpp  CubicSplineInterpolator.h  HermiteInterpolator.cpp  HermiteInterpolator.h  InterpolatorCommon.h  LinearInterpolator.cpp  LinearInterpolator.h
src/3D Interpolation/: Delaune.cpp  Delaune.h  DelauneInterpolation.cpp  DelauneInterpolation.h  Delaune_BW.cpp  Delaune_BW.h  InterpolatorCommon3D.h  NearestTriangularInterpolation3D.cpp  NearestTriangularInterpolation3D.h
src/MD Interpolation/: DelauneInterpolation_MD.h  Delaune_BW_MD.h  InterpolatorCommonMD.h  NearestSimplexInterpolationMD.h
src/NNInterpolation/: NeuralNetwork.h  activation.h  layer.h  losses.h  nn.h  utils.h
tests/2DInterpolator/: Cubic_spline_test.cpp  Hermite_test.cpp  Linear_test.cpp
tests/3DInterpolator/: Delaune_test.cpp  Nearest_Triangle_test.cpp
tests/MDInterpolator/: Delaune_MD_test.cpp  NS+NN.cpp  NearestSimplexInterpolationMD_test.cpp  diff.cpp
tests/NN/: NN_test.cpp
